Fix element spacing

--- a/css/cv.css
+++ b/css/cv.css
@@ -123,7 +123,7 @@ h3 {
 	margin-bottom: 0;
 }
 
-article:first-of-type h3 {
+div.staytogether h3 {
 	margin-top: 0;
 }
 
